// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get access token from url 1`] = `
"{
  \\"__id\\": \\"client:root.local\\",
  \\"__typename\\": \\"Local\\",
  \\"accessToken\\": \\"eyJraWQiOiI5NmM4MDY2YS1kOTg3LTQyODItODNmOS1kYTUxNjc5N2Y5ZmMiLCJhbGciOiJIUzI1NiJ9.eyJqdGkiOiIzMWIyNjU5MS00ZTlhLTQzODgtYTdmZi1lMWJkYzVkOTdjY2UifQ==.\\",
  \\"accessTokenExp\\": null,
  \\"accessTokenJTI\\": \\"31b26591-4e9a-4388-a7ff-e1bdc5d97cce\\",
  \\"redirectPath\\": null,
  \\"authView\\": \\"SIGN_IN\\",
  \\"authError\\": null,
  \\"moderationQueueSort\\": \\"CREATED_AT_DESC\\",
  \\"forceAdminLocalAuth\\": false,
  \\"archivingEnabled\\": false,
  \\"autoArchiveOlderThanMs\\": 10368000000
}"
`;

exports[`init local state 1`] = `
"{
  \\"client:root\\": {
    \\"__id\\": \\"client:root\\",
    \\"__typename\\": \\"__Root\\",
    \\"local\\": {
      \\"__ref\\": \\"client:root.local\\"
    }
  },
  \\"client:root.local\\": {
    \\"__id\\": \\"client:root.local\\",
    \\"__typename\\": \\"Local\\",
    \\"accessToken\\": null,
    \\"accessTokenExp\\": null,
    \\"accessTokenJTI\\": null,
    \\"redirectPath\\": null,
    \\"authView\\": \\"SIGN_IN\\",
    \\"authError\\": null,
    \\"moderationQueueSort\\": \\"CREATED_AT_DESC\\",
    \\"forceAdminLocalAuth\\": false,
    \\"archivingEnabled\\": false,
    \\"autoArchiveOlderThanMs\\": 10368000000
  }
}"
`;
